--- a/views/donation.ejs
+++ b/views/donation.ejs
@@ -15,13 +15,13 @@
 <div class="donation-page">
     <div class="form">
         <h1 class="heading">
-            Lets Make A Change Togeather!
+            Lets Make A Change Together!
         </h1>
 
         <div class="discription">
             <h3>
                 Giving is not just about making a donation, <br> its about making difference. <br>
-                <br> <br> Any help or donation,<br> no matter how small or big,<br> will be deeply appriciated and is much needed.
+                <br> <br> Any help or donation,<br> no matter how small or big,<br> will be deeply appreciated and is much needed.
             </h3>
         </div>
 
